--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bono landing page</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="header-container">
+        <div class="logo-container">
+          <img src="/bono-landing-page/images/logo.svg" alt="" class="image-itself" />
+        </div>
+        <div class="text-content-container">
+          <ul class="list">
+            <li class="list-items"><i class="fa-solid fa-envelope"></i> contact@bono.com</li>
+            <li class="list-items"><i class="fa-solid fa-phone"></i> (+31) 021-800-8244</li>
+            <li class="list-items"><i class="fa-brands fa-twitter"></i></li>
+          </ul>
+        </div>
+      </header>
+    </div>
+  </body>
 </html>
