--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bono landing page</title>
+    <link rel="icon" href="/bono-landing-page/images/favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,6 +34,34 @@
           </ul>
         </div>
       </header>
+      <div class="main-container">
+        <main class="content-container">
+          <div class="input-content-container">
+            <div class="name-input">
+              <p class="name">Full Name</p>
+              <input type="text" name="" id="" />
+            </div>
+            <div class="email-input">
+              <p class="name">Email</p>
+              <input type="email" name="" id="" />
+            </div>
+            <div class="name-input">
+              <p class="name">Your Message</p>
+              <textarea name="" id=""></textarea>
+            </div>
+            <div class="btn-container">
+              <button>Submit</button>
+            </div>
+          </div>
+          <div class="main-text">
+            <h1>Coming Soon For Every Developer</h1>
+            <p>
+              Our new Bono web app will chnage the way you think about content management and will allow you to foucs on
+              whats really important. Use the contact form to send us your thoughts
+            </p>
+          </div>
+        </main>
+      </div>
     </div>
   </body>
 </html>
