worked on the css for the main section/ main text

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             </div>
           </div>
           <div class="main-text">
-            <h1>Coming Soon For Every Developer</h1>
-            <p>
+            <h1 class="main-header">Coming Soon For Every Developer</h1>
+            <p class="main-text-description">
               Our new Bono web app will chnage the way you think about content management and will allow you to foucs on
               whats really important. Use the contact form to send us your thoughts
             </p>
