fixed the form part in the main content

--- a/index.html
+++ b/index.html
@@ -37,21 +37,23 @@
       <div class="main-container">
         <main class="content-container">
           <div class="input-content-container">
-            <div class="name-input">
-              <p class="name">Full Name</p>
-              <input type="text" name="" id="" />
-            </div>
-            <div class="email-input">
-              <p class="name">Email</p>
-              <input type="email" name="" id="" />
-            </div>
-            <div class="name-input">
-              <p class="name">Your Message</p>
-              <textarea name="" id=""></textarea>
-            </div>
-            <div class="btn-container">
-              <button>Submit</button>
-            </div>
+            <form>
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" />
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" />
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea name="message" id="message"></textarea>
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn"></button>
+              </div>
+            </form>
           </div>
           <div class="main-text">
             <h1 class="main-header">Coming Soon For Every Developer</h1>
