--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <textarea name="message" id="message"></textarea>
               </div>
               <div class="form-group">
-                <button type="submit" class="btn"></button>
+                <button type="submit" class="btn">Submit</button>
               </div>
             </form>
           </div>
