--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <input type="email" name="email" id="email" />
               </div>
               <div class="form-group">
-                <label for="message">Message</label>
-                <textarea name="message" id="message"></textarea>
+                <label for="message">Your Message</label>
+                <textarea class="form-group" name="message" id="message"></textarea>
               </div>
               <div class="form-group">
                 <button type="submit" class="btn">Submit</button>
