made subtle changes to the sites css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <header class="header-container">
         <div class="logo-container">
-          <img src="/bono-landing-page/images/logo.svg" alt="" class="image-itself" />
+          <img src="/images/logo.svg" alt="" class="image-itself" />
         </div>
         <div class="text-content-container">
           <ul class="list">
